fix: increase desktop breakpoint by scrollbar width

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,7 +1,7 @@
 // Viewports
 
 $tablet-width: 660px;
-$desktop-width: 980px;
+$desktop-width: 1000px;
 
 // Indents
 
